(feat): menu and header

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "^18.1.0",
     "@angular/platform-server": "^18.1.0",
     "@angular/router": "^18.1.0",
+    "@angular/service-worker": "^18.1.0",
     "@angular/ssr": "^18.1.1",
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@govbr-ds/core": "^3.5.1",
