--- a/angular.json
+++ b/angular.json
@@ -59,6 +59,7 @@
             "styles": [
               "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
               "src/rawline.css",
+              "src/bootstrap.css",
               "node_modules/@govbr-ds/core/dist/core.min.css",
               "src/styles.scss"
             ],
@@ -85,7 +86,8 @@
                   "maximumError": "4kB"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "serviceWorker": "ngsw-config.json"
             },
             "development": {
               "optimization": false,
