--- a/angular.json
+++ b/angular.json
@@ -55,9 +55,10 @@
 							}
 						],
 						"styles": [
-							"node_modules/@fortawesome/fontawesome-free/css/all.min.css",
+							"src/root.css",
 							"src/rawline.css",
 							"src/bootstrap.css",
+							"node_modules/@fortawesome/fontawesome-free/css/all.min.css",
 							"node_modules/@govbr-ds/core/dist/core.min.css",
 							"src/styles.scss"
 						],
