--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	"private": true,
 	"dependencies": {
 		"@angular/animations": "^18.1.0",
+		"@angular/cdk": "^18.1.3",
 		"@angular/common": "^18.1.0",
 		"@angular/compiler": "^18.1.0",
 		"@angular/core": "^18.1.0",
@@ -29,6 +30,7 @@
 		"@govbr-ds/core": "^3.5.1",
 		"dayjs": "^1.11.12",
 		"express": "^4.18.2",
+		"ngx-mask": "^18.0.0",
 		"rxjs": "~7.8.0",
 		"tslib": "^2.3.0",
 		"zone.js": "~0.14.3"
