--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"@angular/ssr": "^18.1.1",
 		"@fortawesome/fontawesome-free": "^5.15.4",
 		"@govbr-ds/core": "^3.5.1",
+		"@swimlane/ngx-charts": "^20.5.0",
 		"dayjs": "^1.11.12",
 		"express": "^4.18.2",
 		"ngx-mask": "^18.0.0",
