--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"dayjs": "^1.11.12",
 		"express": "^4.18.2",
 		"ngx-mask": "^18.0.0",
+		"ngx-skeleton-loader": "^9.0.0",
 		"rxjs": "~7.8.0",
 		"tslib": "^2.3.0",
 		"zone.js": "~0.14.3"
