--- a/angular.json
+++ b/angular.json
@@ -62,12 +62,7 @@
 							"node_modules/@govbr-ds/core/dist/core.min.css",
 							"src/styles.scss"
 						],
-						"scripts": [],
-						"server": "src/main.server.ts",
-						"prerender": true,
-						"ssr": {
-							"entry": "server.ts"
-						}
+						"scripts": []
 					},
 					"configurations": {
 						"production": {
