--- a/package.json
+++ b/package.json
@@ -4,11 +4,9 @@
 	"scripts": {
 		"ng": "ng",
 		"start": "ng serve",
-		"build": "ng build --ssr=false --prerender=false",
-		"build:ssr": "ng build",
+		"build": "ng build",
 		"watch": "ng build --watch --configuration development",
 		"test": "ng test",
-		"serve:ssr:egress-system": "node dist/egress-system/server/server.mjs",
 		"prepare": "husky || true",
 		"p:check": "prettier --config ./.prettierrc --list-different \"src/{app,environments,assets}/**/*{.ts,.js,.json,.css,.scss,.html}\"",
 		"p:fix": "prettier --config ./.prettierrc --write \"src/{app,environments,assets}/**/*{.ts,.js,.json,.css,.scss,.html}\""
@@ -26,10 +24,8 @@
 		"@angular/forms": "^18.1.0",
 		"@angular/platform-browser": "^18.1.0",
 		"@angular/platform-browser-dynamic": "^18.1.0",
-		"@angular/platform-server": "^18.1.0",
 		"@angular/router": "^18.1.0",
 		"@angular/service-worker": "^18.1.0",
-		"@angular/ssr": "^18.1.1",
 		"@fortawesome/fontawesome-free": "^5.15.4",
 		"@govbr-ds/core": "^3.5.1",
 		"@swimlane/ngx-charts": "^20.5.0",
