--- a/package.json
+++ b/package.json
@@ -28,9 +28,10 @@
 		"@angular/service-worker": "^18.1.0",
 		"@fortawesome/fontawesome-free": "^5.15.4",
 		"@govbr-ds/core": "^3.5.1",
-		"@swimlane/ngx-charts": "^20.5.0",
+		"chart.js": "^4.3.0",
 		"dayjs": "^1.11.12",
 		"express": "^4.18.2",
+		"ng2-charts": "^6.0.1",
 		"ngx-mask": "^18.0.0",
 		"ngx-skeleton-loader": "^9.0.0",
 		"rxjs": "~7.8.0",
