--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"dayjs": "^1.11.12",
 		"express": "^4.18.2",
 		"ng2-charts": "^6.0.1",
+		"ngx-editor": "^18.0.0",
 		"ngx-mask": "^18.0.0",
 		"ngx-skeleton-loader": "^9.0.0",
 		"rxjs": "~7.8.0",
