--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
 		"test": "ng test",
 		"prepare": "husky || true",
 		"p:check": "prettier --config ./.prettierrc --list-different \"src/{app,environments,assets}/**/*{.ts,.js,.json,.css,.scss,.html}\"",
-		"p:fix": "prettier --config ./.prettierrc --write \"src/{app,environments,assets}/**/*{.ts,.js,.json,.css,.scss,.html}\""
+		"p:fix": "prettier --config ./.prettierrc --write \"src/{app,environments,assets}/**/*{.ts,.js,.json,.css,.scss,.html}\"",
+		"compodoc:build": "compodoc -p tsconfig.doc.json",
+		"compodoc:build-and-serve": "compodoc -p tsconfig.doc.json -s",
+		"compodoc:serve": "compodoc -s",
+		"doc": "compodoc -p tsconfig.doc.json -n \"Sistema de Egressos UFU\" --language pt-BR --disableCoverage --disableInternal --disableLifeCycleHooks --customLogo ./public/favicon/apple-touch-icon.png --customFavicon ./public/favicon/favicon.ico --output ./documentation"
 	},
 	"engines": {
 		"node": ">=18.20.0"
@@ -43,6 +47,7 @@
 		"@angular-devkit/build-angular": "^18.2.5",
 		"@angular/cli": "^18.2.5",
 		"@angular/compiler-cli": "^18.2.5",
+		"@compodoc/compodoc": "^1.1.25",
 		"@types/express": "^4.17.17",
 		"@types/jasmine": "~5.1.0",
 		"@types/node": "^18.18.0",
