--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -16,15 +16,16 @@ updates:
           - "@angular*"
         update-types:
           - "patch"
+          - "minor"
       angular-security:
         applies-to: security-updates
         patterns:
           - "@angular*"
         update-types:
           - "patch"
+          - "minor"
     ignore:
       - dependency-name: "*"
         update-types: [ "version-update:semver-major" ]
     labels:
       - "dependencies"
-      - "deploy-preview"
