--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
 		"start": "ng serve",
 		"build": "ng build",
 		"watch": "ng build --watch --configuration development",
-		"test": "ng test",
 		"prepare": "husky || true",
 		"p:check": "prettier --config ./.prettierrc --list-different \"src/{app,environments,assets}/**/*{.ts,.js,.json,.css,.scss,.html}\"",
 		"p:fix": "prettier --config ./.prettierrc --write \"src/{app,environments,assets}/**/*{.ts,.js,.json,.css,.scss,.html}\"",
 		"compodoc:build": "compodoc -p tsconfig.doc.json",
 		"compodoc:build-and-serve": "compodoc -p tsconfig.doc.json -s",
 		"compodoc:serve": "compodoc -s",
-		"doc": "compodoc -p tsconfig.doc.json -n \"Sistema de Egressos UFU\" --language pt-BR --disableCoverage --disableInternal --disableLifeCycleHooks --customLogo ./public/favicon/apple-touch-icon.png --customFavicon ./public/favicon/favicon.ico --output ./documentation"
+		"doc": "compodoc -p tsconfig.doc.json -n \"Sistema de Egressos UFU\" --language pt-BR --disableCoverage --disableInternal --disableLifeCycleHooks --customLogo ./public/favicon/apple-touch-icon.png --customFavicon ./public/favicon/favicon.ico --output ./documentation",
+		"test": "ng test",
+		"test:ci": "ng test --ci",
+		"test:coverage": "ng test --ci --json --coverage --test-location-in-results --outputFile=report.json",
+		"test:watch": "ng test --watch"
 	},
 	"engines": {
 		"node": ">=18.20.0"
@@ -44,22 +47,22 @@
 		"zone.js": "~0.14.3"
 	},
 	"devDependencies": {
+		"@angular-builders/jest": "^18.0.0",
 		"@angular-devkit/build-angular": "^18.2.6",
 		"@angular/cli": "^18.2.6",
 		"@angular/compiler-cli": "^18.2.6",
 		"@compodoc/compodoc": "^1.1.25",
+		"@ngneat/spectator": "^19.0.0",
 		"@types/express": "^4.17.17",
-		"@types/jasmine": "~5.1.0",
+		"@types/jest": "^29.5.13",
 		"@types/node": "^18.19.54",
 		"husky": "^9.1.1",
-		"jasmine-core": "~5.3.0",
-		"karma": "~6.4.0",
-		"karma-chrome-launcher": "~3.2.0",
-		"karma-coverage": "~2.2.0",
-		"karma-jasmine": "~5.1.0",
-		"karma-jasmine-html-reporter": "~2.1.0",
+		"jest": "^29.7.0",
+		"jest-preset-angular": "^14.2.4",
 		"lint-staged": "^15.2.7",
 		"prettier": "^3.3.3",
+		"ts-jest": "^29.2.5",
+		"ts-node": "^10.9.2",
 		"typescript": "~5.5.2"
 	},
 	"lint-staged": {
