--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -17,15 +17,13 @@ jobs:
       - name: npm install
         run: npm install
 
-      - name: npm test
-        run: npm run test:coverage
-
       - uses: ArtiomTr/jest-coverage-report-action@v2
         id: coverage
         with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           output: report-markdown
-          coverage-file: report.json
-          skip-step: all
+          skip-step: install
+          test-script: npm run test:coverage
           package-manager: npm
 
       - uses: marocchino/sticky-pull-request-comment@v2
