--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -3,6 +3,9 @@ on:
   pull_request_target:
     branches:
       - main
+permissions:
+  contents: write
+  pull-requests: write
 jobs:
   coverage:
     runs-on: ubuntu-latest
