--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -3,9 +3,15 @@ on:
   pull_request_target:
     branches:
       - main
+
 jobs:
   coverage:
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: write
+      pull-requests: write
+
     steps:
       - uses: actions/checkout@v4
 
