--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -27,11 +27,7 @@ jobs:
       - uses: ArtiomTr/jest-coverage-report-action@v2
         id: coverage
         with:
-          output: comment, report-markdown
+          output: comment
           skip-step: install
           test-script: npm run test:coverage
           package-manager: npm
-
-      - uses: marocchino/sticky-pull-request-comment@v2
-        with:
-          message: ${{ steps.coverage.outputs.report }}
