(tests): added more tests - radio - paginator - loading - dialog-confirm - magic-button - item-info

--- a/angular.json
+++ b/angular.json
@@ -9,6 +9,9 @@
 		"egress-system": {
 			"projectType": "application",
 			"schematics": {
+				"@ngneat/spectator:spectator-component": {
+					"jest": true
+				},
 				"@schematics/angular:component": {
 					"style": "scss",
 					"skipTests": true
