--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -4,7 +4,7 @@
 	"extends": "./tsconfig.json",
 	"compilerOptions": {
 		"outDir": "./out-tsc/spec",
-		"types": ["jest"],
+		"types": ["jest", "node"],
 		"esModuleInterop": true,
 		"emitDecoratorMetadata": false
 	},
