--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           output: report-markdown
           skip-step: install
-          test-script: npm run test:ci
+          test-script: npm run test:coverage
           package-manager: npm
 
       - uses: marocchino/sticky-pull-request-comment@v2
